<resources>
    <string-array name="languages">
        <item>English US</item>
        <item>English UK</item>
        <item>Ukrainian</item>
        <item>Spanish</item>
        <item>French</item>
    </string-array>

    <!-- item_course_stats.xml -->
    <string name="enrollments_label">Enrollments: </string>
    <string name="completion_rate_label">Completion Rate: </string>
    <string name="dropout_rate_label">Dropout Rate: </string>
    <string name="average_rating_label">Average Rating: </string>

    <!-- fragment_teacher_profile_settings.xml -->
    <string name="your_expertise">Your Expertise</string>
    <string name="course_stats_enrollments">Enrollments: %1$d</string>
    <string name="course_stats_completion_rate">Completion Rate: %1$d</string>
    <string name="course_stats_dropouts">Dropouts: %1$d</string>
    <string name="course_stats_avg_rating">Average Rating: %1$.2f</string>

    <!-- fragment_teacher_profile_statistics.xml -->
    <string name="courses_statistics">Courses Statistics</string>

    <!-- activity_add_lesson.xml -->
    <string name="add_course_here">Describe your course</string>
    <string name="add_course_name">Course Name</string>
    <string name="course_language">Course Language</string>
    <string name="tags">Tags</string>
    <string name="course_name_hint">For example, “Marketing for the kids”</string>
    <string name="done">Done</string>

    <!-- fragment_teacher_home.xml -->
    <string name="teacher_greeting_headline">Your Courses</string>

    <!-- activity_video_selection.xml -->
    <string name="add_video_lesson">Add Video Lesson</string>
    <string name="select_video_description">Here you should select the video material and that’s all - we automatically process it and create the full lesson from that</string>
    <string name="video_language_warning">!!! Please, make sure that the language of the video is the same as the language of the course</string>
    <string name="select_button">Select</string>

    <!-- activity_course_edit.xml -->
    <string name="remove_course_description">Remove Course</string>
    <string name="add_lesson_description">Add Lesson</string>
    <string name="publish_button">Publish</string>

    <string name="dialog_remove_course_title">Remove Course</string>
    <string name="dialog_remove_course_message">Do you want to remove your course? It will no longer be recommended for new students, but those who are enrolled will have an opportunity to finish it.</string>
    <string name="dialog_positive_button">Go ahead</string>
    <string name="dialog_negative_button">No</string>
    <string name="course_deleted_message">The course has been deleted!</string>
    <string name="course_delete_error_message">Can\'t delete the Course, try again!</string>

</resources>