<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardBackgroundColor="@color/maverkick_accent_light"
    app:cardCornerRadius="16dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/courseName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/numEnrollments"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_enrollments"
            android:text="@string/enrollments_label"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/courseName"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/completionRate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_completion"
            android:text="@string/completion_rate_label"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/numEnrollments"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/dropoutRate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_dropouts"
            android:text="@string/dropout_rate_label"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/completionRate"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/avgRating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_rating"
            android:text="@string/average_rating_label"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dropoutRate"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
