<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/course_name_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/publish_switch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/course_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/main_accent_color"
            android:layout_gravity="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/publish_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:clickable="false"
        app:layout_constraintTop_toTopOf="@+id/course_name_container"
        app:layout_constraintBottom_toBottomOf="@+id/course_name_container"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/tags"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_name_container" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tags">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/course_poster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop" />

            <ImageView
                android:id="@+id/edit_poster_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_edit"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_margin="8dp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lesson_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/button_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_view"
        tools:listitem="@layout/item_lesson_description"/>

    <FrameLayout
        android:id="@+id/button_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/remove_course_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_delete"
            android:contentDescription="@string/remove_course_description"
            android:layout_gravity="start"
            app:backgroundTint="@color/red" />

        <Button
            android:id="@+id/publish_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/publish_button"
            android:layout_gravity="center_horizontal" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_lesson_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_input_add"
            android:contentDescription="@string/add_lesson_description"
            android:layout_gravity="end"
            app:backgroundTint="@color/main_accent_color" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
